Working on resizing

--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-<canvas id="myCanvas" width="578" height="200"></canvas>
+<canvas id="myCanvas"
+        style = 'position: absolute; left: 0px; top: 0px'>
+      </canvas>
 </body>
 
 </html>
