changed styling to white on grey

--- a/main.html
+++ b/main.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-<canvas id="myCanvas"
-        style = 'position: absolute; left: 0px; top: 0px'>
-      </canvas>
+  <canvas id="myCanvas"> </canvas>
 </body>
 
 </html>
