refactored the animations

--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <link href="style.css" rel="stylesheet">
     <meta charset='utf-8' />
     <title>INKY</title>
+    <script src="anims.js"></script>
     <script src="main.js"></script>
 </head>
 
