replace ready function with defer

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta charset='utf-8' />
     <title>INKY</title>
     <script src="anims.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" defer="defer"></script>
 </head>
 
 <body>
